<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section2"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_clockType"
        android:textOn="@string/clockIn"
        android:textOff="@string/clockOut"
        android:id="@+id/clockType"
        android:checked="true"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_record"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnRecord" />

</LinearLayout>